--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,9 @@
   "license": "MIT",
   "require": {
     "php": ">=7.2.0",
-    "liquetsoft/fias-component": "^3.4"
+    "liquetsoft/fias-component": "^3.4",
+    "elasticsearch/elasticsearch": "^7.6",
+    "psr/log": "^1.1"
   },
   "require-dev": {
     "phpunit/phpunit": "^8.0",
