--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
   "license": "MIT",
   "require": {
     "php": ">=7.2.0",
-    "liquetsoft/fias-component": "^5.0",
+    "liquetsoft/fias-component": "^5.0|^6.0",
     "elasticsearch/elasticsearch": "^7.6",
     "psr/log": "^1.1"
   },
