--- a/composer.json
+++ b/composer.json
@@ -5,16 +5,16 @@
   "keywords": ["php", "fias", "elasticsearch"],
   "license": "MIT",
   "require": {
-    "php": ">=7.2.0",
-    "liquetsoft/fias-component": "^5.0|^6.0",
+    "php": ">=7.4.0",
+    "liquetsoft/fias-component": "^7.0",
     "elasticsearch/elasticsearch": "^7.6",
     "psr/log": "^1.1"
   },
   "require-dev": {
-    "phpunit/phpunit": "^8.0|^9.0",
+    "phpunit/phpunit": "^9.0",
     "fzaninotto/faker": "^1.7",
     "friendsofphp/php-cs-fixer": "^2.11",
-    "sebastian/phpcpd": "^4.0|^5.0",
+    "sebastian/phpcpd": "^5.0",
     "vimeo/psalm": "^3.0",
     "nette/php-generator": "^3.2"
   },
