--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
     "php": ">=7.4.0",
     "liquetsoft/fias-component": "^7.0",
     "elasticsearch/elasticsearch": "^7.6",
-    "psr/log": "^1.1"
+    "psr/log": "^1.1",
+    "ext-json": "*"
   },
   "require-dev": {
     "phpunit/phpunit": "^9.0",
