--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,8 @@
     "phpunit/phpunit": "^9.0",
     "fzaninotto/faker": "^1.7",
     "friendsofphp/php-cs-fixer": "^2.11",
-    "sebastian/phpcpd": "^5.0",
-    "vimeo/psalm": "^3.0",
+    "sebastian/phpcpd": "^6.0",
+    "vimeo/psalm": "^4.0",
     "nette/php-generator": "^3.2"
   },
   "autoload": {
@@ -30,6 +30,13 @@
       "Liquetsoft\\Fias\\Elastic\\Generator\\": "generator/"
     }
   },
+  "scripts": {
+        "test": "vendor/bin/phpunit --configuration phpunit.xml.dist",
+        "coverage": "vendor/bin/phpunit --configuration phpunit.xml.dist --coverage-html=tests/coverage",
+        "fixer": "vendor/bin/php-cs-fixer fix --config=.php_cs.dist -v",
+        "linter": "vendor/bin/php-cs-fixer fix --config=.php_cs.dist -v --dry-run --stop-on-violation && vendor/bin/phpcpd ./ --exclude vendor --exclude tests --exclude src/Entity --exclude src/Serializer && vendor/bin/psalm --show-info=true",
+        "entites": "php -f generator/generate_entities.php && vendor/bin/php-cs-fixer fix --config=.php_cs.dist -q"
+    },
   "repositories": [
     {
       "type": "git",
