--- a/composer.json
+++ b/composer.json
@@ -5,15 +5,15 @@
   "keywords": ["php", "fias", "elasticsearch"],
   "license": "MIT",
   "require": {
-    "php": ">=7.4.0",
-    "liquetsoft/fias-component": "^7.0",
+    "php": ">=7.4",
+    "liquetsoft/fias-component": "^8.0",
     "elasticsearch/elasticsearch": "^7.6",
     "psr/log": "^1.1",
     "ext-json": "*"
   },
   "require-dev": {
     "phpunit/phpunit": "^9.0",
-    "fzaninotto/faker": "^1.7",
+    "fakerphp/faker": "^1.7",
     "friendsofphp/php-cs-fixer": "^2.11",
     "sebastian/phpcpd": "^6.0",
     "vimeo/psalm": "^4.0",
@@ -35,7 +35,7 @@
         "coverage": "vendor/bin/phpunit --configuration phpunit.xml.dist --coverage-html=tests/coverage",
         "fixer": "vendor/bin/php-cs-fixer fix --config=.php_cs.dist -v",
         "linter": "vendor/bin/php-cs-fixer fix --config=.php_cs.dist -v --dry-run --stop-on-violation && vendor/bin/phpcpd ./ --exclude vendor --exclude tests --exclude src/Entity --exclude src/Serializer && vendor/bin/psalm --show-info=true",
-        "entites": "php -f generator/generate_entities.php && vendor/bin/php-cs-fixer fix --config=.php_cs.dist -q"
+        "entities": "php -f generator/generate_entities.php && vendor/bin/php-cs-fixer fix --config=.php_cs.dist -q"
     },
   "repositories": [
     {
