--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
   "license": "MIT",
   "require": {
     "php": ">=7.4",
-    "liquetsoft/fias-component": "^8.0",
+    "liquetsoft/fias-component": "^9.0",
     "elasticsearch/elasticsearch": "^7.6",
     "psr/log": "^1.1",
     "ext-json": "*"
@@ -33,9 +33,16 @@
   "scripts": {
         "test": "vendor/bin/phpunit --configuration phpunit.xml.dist",
         "coverage": "vendor/bin/phpunit --configuration phpunit.xml.dist --coverage-html=tests/coverage",
-        "fixer": "vendor/bin/php-cs-fixer fix --config=.php_cs.dist -v",
-        "linter": "vendor/bin/php-cs-fixer fix --config=.php_cs.dist -v --dry-run --stop-on-violation && vendor/bin/phpcpd ./ --exclude vendor --exclude tests --exclude src/Entity --exclude src/Serializer && vendor/bin/psalm --show-info=true",
-        "entities": "php -f generator/generate_entities.php && vendor/bin/php-cs-fixer fix --config=.php_cs.dist -q"
+        "fixer": "vendor/bin/php-cs-fixer fix --config=.php_cs.dist -v --allow-risky=yes",
+        "linter": [
+            "vendor/bin/php-cs-fixer fix --config=.php_cs.dist -v --dry-run --stop-on-violation --allow-risky=yes",
+            "vendor/bin/phpcpd ./ --exclude vendor --exclude tests --exclude src/Entity --exclude src/Serializer",
+            "vendor/bin/psalm --show-info=true"
+        ],
+        "entities": [
+            "php -f generator/generate_entities.php",
+            "vendor/bin/php-cs-fixer fix --config=.php_cs.dist -v --allow-risky=yes -q"
+        ]
     },
   "repositories": [
     {
