--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
   "require-dev": {
     "phpunit/phpunit": "^9.0",
     "fakerphp/faker": "^1.7",
-    "friendsofphp/php-cs-fixer": "^2.11",
+    "friendsofphp/php-cs-fixer": "^2.11|^3.0",
     "sebastian/phpcpd": "^6.0",
     "vimeo/psalm": "^4.0",
     "nette/php-generator": "^3.2",
